<resources>
    <string name="app_name">EV3ProjectsAndroid</string>
    <string name="title_activity_main">EV3Projects</string>
    <string name="title_activity_debug_info">Debugging info</string>

    <string name="title_fragment_connect">Connection</string>
    <string name="title_fragment_test_model">Test model</string>
    <string name="title_fragment_remote_control">Remote control</string>
    <string name="title_fragment_advanced_remote_control">Advanced Remote control</string>
    <string name="title_fragment_slam_control">SLAM Mapper</string>
    <string name="title_fragment_line_follow">Line follower</string>

    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>

    <string name="text_no_model">No model</string>

    <string name="text_view_connect_ip_address">IP Address</string>

    <string name="but_start">Start</string>
    <string name="but_stop">Stop</string>
    <string name="but_connect">Connect</string>
    <string name="but_disconnect">Disconnect</string>
    <string name="but_add_model">Add Model</string>
    <string name="but_test_forward">Forward 50cm</string>
    <string name="but_test_rotate">Rotate 10*360°</string>

    <string name="toast_text_action_failed">Action for %s failed</string>
    <string name="toast_text_version_mismatch">%s is running on another version</string>
    <string name="toast_text_connection_required">Connect to EV3 and setup your model first</string>
    <string name="toast_text_connection_lost">Connection to %s was lost</string>
</resources>
