<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/ic_home_dashboard"
            android:title="@string/title_fragment_connect" /><!--TODO: another icon-->

        <item
            android:id="@+id/nav_remote_control"
            android:enabled="false"
            android:icon="@drawable/ic_home_dashboard"
            android:title="@string/title_fragment_remote_control" /><!--TODO: another icon-->

        <item
            android:id="@+id/nav_advanced_remote_control"
            android:enabled="false"
            android:icon="@drawable/ic_home_dashboard"
            android:title="@string/title_fragment_remote_control" /><!--TODO: another icon-->

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_debug"
            android:visible="false"/>

    </group>

</menu>
